# Substance-Painter-Usd-Creator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sp_plugin.py  test_pxr_loader.py
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  docs-pages.yml  run-tests.yml
Examples/: main.usda  materials.usda
Examples/Asset/: Asset.usd  geo.usdc  mtl.usdc
Examples/layers/: layer_assign.usda  layer_mats.usda  mesh.usd
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  conf.py  developer_guide.rst  index.md  index.rst  user_guide.rst
docs/api/: index.md  index.rst
packaging/: AxeFX_usd_plugin.py  axe_usd_plugin.py
packaging/axe_usd_plugin/: __init__.py
scripts/: material_classes.py  material_processor.py  usd_material_processor.py  usd_utils.py
scripts/core/: __init__.py  exporter.py  fs_utils.py  models.py  publish_paths.py  texture_keys.py  texture_parser.py
scripts/usd/: __init__.py  (+1 more)
tests/: conftest.py  test_asset_files.py  test_asset_structure.py  test_exceptions.py  test_exporter.py  test_filesystem.py  test_fs_utils.py  test_material_model.py  test_naming.py  test_publish_paths.py  test_sp_preview_export_config.py  test_sp_ui_export_settings.py  test_texture_keys.py  test_texture_parser.py  test_texture_parser_errors.py  test_texture_parser_skip_empty.py  test_usd_material_processor.py  test_usd_pxr_writer.py  test_usd_scene_fixup.py  test_usd_utils.py  verify_version_check_headless.py
tools/: build_plugin.py  install_plugin.ps1  preview_ui.py  test_sp_export.py  verify_pxr_loader.py  verify_version_check_headless.py  vulture_whitelist.py
(+73 files in other folders)
