[project]
name = "sp-usd-creator"
version = "1.5.0"
requires-python = "==3.9.*"
dependencies = [
  "usd-core==24.5",
]

[project.scripts]
sp-usd-preview-ui = "tools.preview_ui:main"

[dependency-groups]
dev = [
  "OpenImageIO",
  "PySide6-Essentials",
  "furo",
  "myst-parser",
  "pytest-cov",
  "pytest",
  "sphinx-copybutton",
  "sphinx",
  "ruff",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_usd_*.py" = ["E402"]
